Added user guide

--- a/route.html
+++ b/route.html
@@ -38,6 +38,9 @@
                     </div>
                     <div class="col-md-3 text-center text-md-end">
                         <div class="header-buttons d-flex justify-content-end gap-2 flex-wrap">
+                            <button class="btn btn-info" onclick="openUserGuide()">
+                                <i class="fas fa-file-pdf me-2"></i>User Guide
+                            </button>
                             <button class="btn btn-success" onclick="initializeAppWithStyles()">
                                 <i class="fas fa-play me-2"></i>Home
                             </button>
